Important changes since GBBopen 0.9.9:
  
  * Support for set-composite dimension values and space-instance storage of
    them; support for incomposite (scalar) pattern retrieval of set-composite
    unit instances

Important changes in GBBopen 0.9.9:

  * INCOMPATIBLE CHANGE: INSTANCE-DIMENSION-VALUE now returns five values:
      1. the dimension value of the unit instance in the specified dimension
      2. the dimension-value type of the specified dimension
      3. the comparison type of the specified dimension
      4. the composite type of the dimension value, if it is a
         composite; NIL if it is an incomposite value
      5. the name of the ordering dimension if the dimension value is
         a series composite; NIL otherwise
    The third value is new in GBBopen 0.9.9.

  * Renamed "specified comparison test" element (enumerated dimension) 
    pattern operators:
       EQ     -> IS-EQ
       EQL    -> IS-EQL
       EQUAL  -> IS-EQUAL
       EQUALP -> IS-EQUALP 
    The old operator names are deprecated, but will remain available until the
    next release

  * New comparison-type specification support for DEFINE-UNIT-CLASS
    :DIMENSIONAL-VALUES class option

  * The :TEST option for a hashed-storage specification to
    MAKE-SPACE-INSTANCE is deprecated, as the comparison test is now
    determined from the dimension comparison-type specifications of
    the unit classes associated with the hashed storage

  * <install-dir>/gbbopen-init.lisp renamed to more intuitive
    <install-dir>/initiate.lisp

  * Reloading of changed commands.lisp and modules.lisp files in
    <homedir>/gbbopen-modules/ directory  

  * New :nopropagate option to COMPILE-MODULE and LOAD-MODULE; improved
    remembering of REPL :cm and :lm command parameters 

  * New :MINI-MODULE-USER package

  * New :CLASS-NAME-TRANSLATIONS argument added to LOAD-BLACKBOARD-REPOSITORY
    and WITH-READING-SAVED/SENT-OBJECTS-BLOCK

  * New NEXT-CLASS-INSTANCE-NUMBER function
